Sheet model added with some changes in the models.py

--- a/students/templates/students/_topnav.html
+++ b/students/templates/students/_topnav.html
@@ -18,13 +18,13 @@
             <li><a href="#">Expired <span class="badge">20</span></a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#"><span class=" glyphicon glyphicon-user"></span> Sign In</a></li>
+            <li><a href="/admin/"><span class=" glyphicon glyphicon-user"></span> Sign In</a></li>
           </ul>
           <form class="navbar-form navbar-right">
             <div class="input-group">
-              <input type="text" class="form-control" placeholder="Enter roll number...">
+              <input type="text" class="form-control" placeholder="Enter roll number..." id="roll-field">
               <span class="input-group-btn">
-                <button class="btn btn-default" type="button"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
+                <button class="btn btn-default" type="button" id="roll-search"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
               </span>
             </div>
           </form>
