--- a/students/templates/students/base.html
+++ b/students/templates/students/base.html
@@ -15,7 +15,7 @@
   </div>
   <script src="{% static 'students/js/jquery.min.js' %}"></script>
   <script src="{% static 'students/js/bootstrap.min.js' %}"></script>
-  <script src="{% static 'students/js/bootstrap.min.js' %}"></script>
+  <script src="{% static 'students/js/main.js' %}"></script
   {% block scripts %}{% endblock %}
 </body>
 </html>
