--- a/students/templates/students/demo/_breadcrumb.html
+++ b/students/templates/students/demo/_breadcrumb.html
@@ -1,6 +1,6 @@
 <nav class="col-xs-12 col-md-3">
   <ul class="breadcrumb">
     <li>Students</li>
-    <li>121445</li>
+    <li>{{ student.roll }}</li>
   </ul>
 </nav>
