--- a/students/templates/students/demo/attendances.html
+++ b/students/templates/students/demo/attendances.html
@@ -1,416 +1,37 @@
 {% extends './demo_base.html' %}
 
+{% block title %}{{ student.roll }} | Attendance Record{% endblock %}
+
 {% block attendances_active %}class="active"{% endblock %}
 
 {% block content %}
-<div class="row">
-  <div class="col-xs-12 col-sm-6 col-md-4">
-    <div class="calendar">
-      <div class="calendar-header">
-        <div class="calendar-title">May - 2017</div>
+<div class="panel-group">
+{% for month_dt, dates in student.attending_dates_breakdown.items %}
+{% if dates %}
+  <div class="panel panel-info" data-toggle="collapse" href="#{{ month_dt|date:"m-d-Y" }}">
+    <div class="panel-heading">
+      <div class="panel-title pull-left">
+        {{ month_dt|date:"F - Y" }}
       </div>
-      <div class="calendar-body">
-        <table>
-          <tr class="weekdays">
-            <th>Sa</th>
-            <th>Su</th>
-            <th>Mo</th>
-            <th>Tu</th>
-            <th>We</th>
-            <th>Th</th>
-            <th>Fr</th>
-          </tr>
-          <tr class="dates">
-            <td class="inactive">28</td>
-            <td class="inactive">29</td>
-            <td class="inactive">30</td>
-            <td class="inactive">31</td>
-            <td><a href="#">1</a></td>
-            <td><a href="#">2</a></td>
-            <td><a href="#">3</a></td>
-          </tr>
+      <span class="badge pull-right">{{ dates|length }}</span>
+      <div class="clearfix"></div>
+    </div>
+    <div id="{{ month_dt|date:"m-d-Y" }}" class="panel-body collapse">
+      <table class="table table-condensed detail">
+        <tr>
+          <th>Date</th>
+          <th>Weekday</th>
+        </tr>
+        {% for date in dates %}
           <tr>
-            <td><a href="#">4</a></td>
-            <td><a href="#">5</a></td>
-            <td><a href="#">6</a></td>
-            <td><a href="#">7</a></td>
-            <td><a href="#">8</a></td>
-            <td class="active"><a href="#">9</a></td>
-            <td class="active"><a href="#">10</a></td>
+            <td>{{ date|date:"M d, Y" }}</td>
+            <td>{{ date|date:"l" }}</td>
           </tr>
-          <tr>
-            <td class="active"><a href="#">11</a></td>
-            <td class="active"><a href="#">12</a></td>
-            <td class="active"><a href="#">13</a></td>
-            <td id="today"><a href="#">14</a></td>
-            <td><a href="#">15</a></td>
-            <td><a href="#">16</a></td>
-            <td><a href="#">17</a></td>
-          </tr>
-          <tr>
-            <td><a href="#">18</a></td>
-            <td><a href="#">19</a></td>
-            <td><a href="#">20</a></td>
-            <td><a href="#">21</a></td>
-            <td><a href="#">22</a></td>
-            <td><a href="#">23</a></td>
-            <td><a href="#">24</a></td>
-          </tr>
-          <tr>
-            <td><a href="#">25</a></td>
-            <td><a href="#">26</a></td>
-            <td><a href="#">27</a></td>
-            <td><a href="#">28</a></td>
-            <td><a href="#">29</a></td>
-            <td><a href="#">30</a></td>
-            <td class="inactive">1</td>
-          </tr>
-        </table>
-      </div>
-      <div class="calendar-footer">
-        5 classes
-      </div>
+        {% endfor %}
+      </table>
     </div>
   </div>
-  <div class="col-xs-12 col-sm-6 col-md-4">
-    <div class="calendar calendar-future">
-      <div class="calendar-header">
-        <div class="calendar-title">May - 2017</div>
-      </div>
-      <div class="calendar-body">
-        <table>
-          <tr class="weekdays">
-            <th>Sa</th>
-            <th>Su</th>
-            <th>Mo</th>
-            <th>Tu</th>
-            <th>We</th>
-            <th>Th</th>
-            <th>Fr</th>
-          </tr>
-          <tr class="dates">
-            <td class="inactive">28</td>
-            <td class="inactive">29</td>
-            <td class="inactive">30</td>
-            <td class="inactive">31</td>
-            <td><a href="#">1</a></td>
-            <td><a href="#">2</a></td>
-            <td><a href="#">3</a></td>
-          </tr>
-          <tr>
-            <td><a href="#">4</a></td>
-            <td><a href="#">5</a></td>
-            <td><a href="#">6</a></td>
-            <td><a href="#">7</a></td>
-            <td><a href="#">8</a></td>
-            <td><a href="#">9</a></td>
-            <td><a href="#">10</a></td>
-          </tr>
-          <tr>
-            <td><a href="#">11</a></td>
-            <td><a href="#">12</a></td>
-            <td><a href="#">13</a></td>
-            <td><a href="#">14</a></td>
-            <td><a href="#">15</a></td>
-            <td><a href="#">16</a></td>
-            <td><a href="#">17</a></td>
-          </tr>
-          <tr>
-            <td><a href="#">18</a></td>
-            <td><a href="#">19</a></td>
-            <td><a href="#">20</a></td>
-            <td><a href="#">21</a></td>
-            <td><a href="#">22</a></td>
-            <td><a href="#">23</a></td>
-            <td><a href="#">24</a></td>
-          </tr>
-          <tr>
-            <td><a href="#">25</a></td>
-            <td><a href="#">26</a></td>
-            <td><a href="#">27</a></td>
-            <td><a href="#">28</a></td>
-            <td><a href="#">29</a></td>
-            <td><a href="#">30</a></td>
-            <td class="inactive">1</td>
-          </tr>
-        </table>
-      </div>
-      <div class="calendar-footer">
-        future classes
-      </div>
-    </div>
-  </div>
-  <div class="col-xs-12 col-sm-6 col-md-4">
-    <div class="calendar calendar-future">
-      <div class="calendar-header">
-        <div class="calendar-title">May - 2017</div>
-      </div>
-      <div class="calendar-body">
-        <table>
-          <tr class="weekdays">
-            <th>Sa</th>
-            <th>Su</th>
-            <th>Mo</th>
-            <th>Tu</th>
-            <th>We</th>
-            <th>Th</th>
-            <th>Fr</th>
-          </tr>
-          <tr class="dates">
-            <td class="inactive">28</td>
-            <td class="inactive">29</td>
-            <td class="inactive">30</td>
-            <td class="inactive">31</td>
-            <td><a href="#">1</a></td>
-            <td><a href="#">2</a></td>
-            <td><a href="#">3</a></td>
-          </tr>
-          <tr>
-            <td><a href="#">4</a></td>
-            <td><a href="#">5</a></td>
-            <td><a href="#">6</a></td>
-            <td><a href="#">7</a></td>
-            <td><a href="#">8</a></td>
-            <td><a href="#">9</a></td>
-            <td><a href="#">10</a></td>
-          </tr>
-          <tr>
-            <td><a href="#">11</a></td>
-            <td><a href="#">12</a></td>
-            <td><a href="#">13</a></td>
-            <td><a href="#">14</a></td>
-            <td><a href="#">15</a></td>
-            <td><a href="#">16</a></td>
-            <td><a href="#">17</a></td>
-          </tr>
-          <tr>
-            <td><a href="#">18</a></td>
-            <td><a href="#">19</a></td>
-            <td><a href="#">20</a></td>
-            <td><a href="#">21</a></td>
-            <td><a href="#">22</a></td>
-            <td><a href="#">23</a></td>
-            <td><a href="#">24</a></td>
-          </tr>
-          <tr>
-            <td><a href="#">25</a></td>
-            <td><a href="#">26</a></td>
-            <td><a href="#">27</a></td>
-            <td><a href="#">28</a></td>
-            <td><a href="#">29</a></td>
-            <td><a href="#">30</a></td>
-            <td class="inactive">1</td>
-          </tr>
-        </table>
-      </div>
-      <div class="calendar-footer">
-        future classes
-      </div>
-    </div>
-  </div>
-  <div class="col-xs-12 col-sm-6 col-md-4">
-    <div class="calendar calendar-future">
-      <div class="calendar-header">
-        <div class="calendar-title">May - 2017</div>
-      </div>
-      <div class="calendar-body">
-        <table>
-          <tr class="weekdays">
-            <th>Sa</th>
-            <th>Su</th>
-            <th>Mo</th>
-            <th>Tu</th>
-            <th>We</th>
-            <th>Th</th>
-            <th>Fr</th>
-          </tr>
-          <tr class="dates">
-            <td class="inactive">28</td>
-            <td class="inactive">29</td>
-            <td class="inactive">30</td>
-            <td class="inactive">31</td>
-            <td><a href="#">1</a></td>
-            <td><a href="#">2</a></td>
-            <td><a href="#">3</a></td>
-          </tr>
-          <tr>
-            <td><a href="#">4</a></td>
-            <td><a href="#">5</a></td>
-            <td><a href="#">6</a></td>
-            <td><a href="#">7</a></td>
-            <td><a href="#">8</a></td>
-            <td><a href="#">9</a></td>
-            <td><a href="#">10</a></td>
-          </tr>
-          <tr>
-            <td><a href="#">11</a></td>
-            <td><a href="#">12</a></td>
-            <td><a href="#">13</a></td>
-            <td><a href="#">14</a></td>
-            <td><a href="#">15</a></td>
-            <td><a href="#">16</a></td>
-            <td><a href="#">17</a></td>
-          </tr>
-          <tr>
-            <td><a href="#">18</a></td>
-            <td><a href="#">19</a></td>
-            <td><a href="#">20</a></td>
-            <td><a href="#">21</a></td>
-            <td><a href="#">22</a></td>
-            <td><a href="#">23</a></td>
-            <td><a href="#">24</a></td>
-          </tr>
-          <tr>
-            <td><a href="#">25</a></td>
-            <td><a href="#">26</a></td>
-            <td><a href="#">27</a></td>
-            <td><a href="#">28</a></td>
-            <td><a href="#">29</a></td>
-            <td><a href="#">30</a></td>
-            <td class="inactive">1</td>
-          </tr>
-        </table>
-      </div>
-      <div class="calendar-footer">
-        future classes
-      </div>
-    </div>
-  </div>
-  <div class="col-xs-12 col-sm-6 col-md-4">
-    <div class="calendar calendar-future">
-      <div class="calendar-header">
-        <div class="calendar-title">May - 2017</div>
-      </div>
-      <div class="calendar-body">
-        <table>
-          <tr class="weekdays">
-            <th>Sa</th>
-            <th>Su</th>
-            <th>Mo</th>
-            <th>Tu</th>
-            <th>We</th>
-            <th>Th</th>
-            <th>Fr</th>
-          </tr>
-          <tr class="dates">
-            <td class="inactive">28</td>
-            <td class="inactive">29</td>
-            <td class="inactive">30</td>
-            <td class="inactive">31</td>
-            <td><a href="#">1</a></td>
-            <td><a href="#">2</a></td>
-            <td><a href="#">3</a></td>
-          </tr>
-          <tr>
-            <td><a href="#">4</a></td>
-            <td><a href="#">5</a></td>
-            <td><a href="#">6</a></td>
-            <td><a href="#">7</a></td>
-            <td><a href="#">8</a></td>
-            <td><a href="#">9</a></td>
-            <td><a href="#">10</a></td>
-          </tr>
-          <tr>
-            <td><a href="#">11</a></td>
-            <td><a href="#">12</a></td>
-            <td><a href="#">13</a></td>
-            <td><a href="#">14</a></td>
-            <td><a href="#">15</a></td>
-            <td><a href="#">16</a></td>
-            <td><a href="#">17</a></td>
-          </tr>
-          <tr>
-            <td><a href="#">18</a></td>
-            <td><a href="#">19</a></td>
-            <td><a href="#">20</a></td>
-            <td><a href="#">21</a></td>
-            <td><a href="#">22</a></td>
-            <td><a href="#">23</a></td>
-            <td><a href="#">24</a></td>
-          </tr>
-          <tr>
-            <td><a href="#">25</a></td>
-            <td><a href="#">26</a></td>
-            <td><a href="#">27</a></td>
-            <td><a href="#">28</a></td>
-            <td><a href="#">29</a></td>
-            <td><a href="#">30</a></td>
-            <td class="inactive">1</td>
-          </tr>
-        </table>
-      </div>
-      <div class="calendar-footer">
-        future classes
-      </div>
-    </div>
-  </div>
-  <div class="col-xs-12 col-sm-6 col-md-4">
-    <div class="calendar calendar-future">
-      <div class="calendar-header">
-        <div class="calendar-title">May - 2017</div>
-      </div>
-      <div class="calendar-body">
-        <table>
-          <tr class="weekdays">
-            <th>Sa</th>
-            <th>Su</th>
-            <th>Mo</th>
-            <th>Tu</th>
-            <th>We</th>
-            <th>Th</th>
-            <th>Fr</th>
-          </tr>
-          <tr class="dates">
-            <td class="inactive">28</td>
-            <td class="inactive">29</td>
-            <td class="inactive">30</td>
-            <td class="inactive">31</td>
-            <td><a href="#">1</a></td>
-            <td><a href="#">2</a></td>
-            <td><a href="#">3</a></td>
-          </tr>
-          <tr>
-            <td><a href="#">4</a></td>
-            <td><a href="#">5</a></td>
-            <td><a href="#">6</a></td>
-            <td><a href="#">7</a></td>
-            <td><a href="#">8</a></td>
-            <td><a href="#">9</a></td>
-            <td><a href="#">10</a></td>
-          </tr>
-          <tr>
-            <td><a href="#">11</a></td>
-            <td><a href="#">12</a></td>
-            <td><a href="#">13</a></td>
-            <td><a href="#">14</a></td>
-            <td><a href="#">15</a></td>
-            <td><a href="#">16</a></td>
-            <td><a href="#">17</a></td>
-          </tr>
-          <tr>
-            <td><a href="#">18</a></td>
-            <td><a href="#">19</a></td>
-            <td><a href="#">20</a></td>
-            <td><a href="#">21</a></td>
-            <td><a href="#">22</a></td>
-            <td><a href="#">23</a></td>
-            <td><a href="#">24</a></td>
-          </tr>
-          <tr>
-            <td><a href="#">25</a></td>
-            <td><a href="#">26</a></td>
-            <td><a href="#">27</a></td>
-            <td><a href="#">28</a></td>
-            <td><a href="#">29</a></td>
-            <td><a href="#">30</a></td>
-            <td class="inactive">1</td>
-          </tr>
-        </table>
-      </div>
-      <div class="calendar-footer">
-        future classes
-      </div>
-    </div>
-  </div>
+{% endif %}
+{% endfor %}
 </div>
 {% endblock content %}
