Minor tweaks for conforming PEP8

--- a/students/templates/students/demo/demo_base.html
+++ b/students/templates/students/demo/demo_base.html
@@ -13,7 +13,7 @@
       <li role="presentation" {% block attendances_active %}{% endblock %}>
         <a href="{% url 'students:attendences' student.roll %}">Attendences</a>
       </li>
-      <li role="" {% block tests_active %}{% endblock %}>
+      <li role="presentation" {% block tests_active %}{% endblock %}>
         <a href="{% url 'students:tests' student.roll %}">Tests</a>
       </li>
       <li role="presentation" {% block sheets_active %}{% endblock %}>
